# Capture_App

./: Capture_App.sln
Capture_App/: Capture.vcxproj
Capture_App/x64/Debug/: Capture.exe.recipe
Capture_App/x64/Debug/Capture.tlog/: Capture.lastbuildstate
Test/Test_ZMQ/: CMakeLists.txt  Test_ZMQ.vcxproj  Test_ZMQ.vcxproj.filters  client.cpp  server.cpp
Test/Test_ZMQ/x64/Debug/: Test_ZMQ.exe.recipe  Test_ZMQ.ilk  Test_ZMQ.vcxproj.FileListAbsolute.txt  vc143.idb
Test/Test_ZMQ/x64/Debug/Test_ZMQ.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Test_ZMQ.lastbuildstate  Test_ZMQ.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Test_ZMQ/: Test_ZMQ.vcxproj  Test_ZMQ.vcxproj.filters
